docs: banner+noindex, icon/CTA normalization, dark/light contrast fixes, and CI a11y checks  [spi-011m]

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -68,6 +68,22 @@ jobs:
             exit 1
           fi
 
+      - name: Guard forbid invalid icon markup
+        run: |
+          set -euo pipefail
+          bad='(:octicons-.*-24:|\.lg \.middle|:material-check-circle:\{ *\.green *\})'
+          if grep -REn "$bad" docs/ >/dev/null; then
+            echo "ERROR: Forbidden icon patterns found."
+            grep -REn "$bad" docs/ | sed 's/^/ - /'
+            exit 1
+          fi
+
+      - name: Guard require dev banner partial and robots noindex
+        run: |
+          set -euo pipefail
+          test -f docs/_overrides/partials/announce.html || { echo "Missing dev banner partial"; exit 1; }
+          grep -q 'name: robots' mkdocs.yml && grep -q 'noindex' mkdocs.yml || { echo "Missing robots noindex meta"; exit 1; }
+
       - name: Generate references --check
         run: |
           python scripts/gen_docs_config_ref.py --check
@@ -80,9 +96,25 @@ jobs:
             --config lychee.toml
             docs/**/*.md
 
-      - name: Build site
+      - name: Build site (strict)
+        run: mkdocs build --strict
+
+      - name: Setup Node for pa11y-ci
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install pa11y-ci and http-server
+        run: npm i -g pa11y-ci http-server
+
+      - name: Serve site locally
         run: |
-          mkdocs build --strict
+          nohup http-server site -p 8080 >/dev/null 2>&1 &
+          echo "http://127.0.0.1:8080" > .site_url
+
+      - name: Accessibility & contrast checks (WCAG2AA)
+        run: |
+          pa11y-ci --config .pa11yci.json
 
       - name: Verify site output and list contents (diagnostics)
         run: |
