--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ site_author: SpinePrep Contributors
 
 theme:
   name: material
+  custom_dir: docs/_overrides
   features:
     - navigation.instant
     - navigation.tabs
@@ -92,6 +93,8 @@ extra:
     provider: mike
   # Analytics can be added via theme extras in CI if desired.
   meta:
+    - name: robots
+      content: noindex, nofollow
     - name: description
       content: "SpinePrep: rigorous spinal cord preprocessing pipeline with QC, registration and BIDS derivatives."
     - property: og:type
