--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v6.0.0
     hooks:
       - id: check-yaml
+        exclude: ^mkdocs\.yml$
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
@@ -26,7 +27,7 @@ repos:
         args: ["--profile", "black"]
 
   - repo: https://github.com/snakemake/snakefmt
-    rev: 0.11.2
+    rev: v0.11.2
     hooks:
       - id: snakefmt
         args: ["-l", "100"]
