--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -123,6 +123,7 @@ nav:
   - User Guide:
     - user-guide/usage.md
     - user-guide/doctor.md
+    - user-guide/config.md
     - user-guide/outputs.md
     - user-guide/qc.md
     - user-guide/registration.md
