feat(ingest): BIDS ingest and manifest cache with hashing
- Add BIDS file walker that skips derivatives/code/sourcedata/tmp
- Implement SHA256 hashing for files ≤50MB (configurable with --hash-large)
- Parse BIDS structure to extract subject, session, modality, suffix
- Generate manifest.csv with path, size, hash, and BIDS metadata
- Integrate into spineprep run command
- Include 2 comprehensive tests for ingest functionality
- Add user documentation for ingest feature

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,6 +124,7 @@ nav:
     - user-guide/usage.md
     - user-guide/doctor.md
     - user-guide/config.md
+    - user-guide/ingest.md
     - user-guide/outputs.md
     - user-guide/qc.md
     - user-guide/registration.md
