feat(motion): compute FD & DVARS per run, write confounds TSV and plots
- Implement FD (framewise displacement) computation with Power et al. formula
- Implement DVARS (temporal derivative RMS) with automatic masking
- Generate confounds TSV with motion params, FD, and DVARS in strict column order
- Create QC plots (FD and DVARS line plots) as PNGs
- Integrate motion processing into spineprep run after ingest
- Include 3 comprehensive tests with FD exactness tolerance 1e-6
- Add user documentation with formulas and examples

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -125,6 +125,7 @@ nav:
     - user-guide/doctor.md
     - user-guide/config.md
     - user-guide/ingest.md
+    - user-guide/motion.md
     - user-guide/outputs.md
     - user-guide/qc.md
     - user-guide/registration.md
