feat(confounds): add aCompCor (6 PCs) and censor column with mask sourcing
- Implement aCompCor extraction from WM/CSF masks with PCA
- Add mask discovery with fallback to heuristic masks (central crop + z-score)
- Compute censor column from FD/DVARS thresholds in config
- Extend confounds TSV with acompcor01-06 and censor columns
- Include 3 comprehensive tests (aCompCor shape, censor logic, end-to-end)
- Integrate confounds processing into spineprep run after motion
- Add fallback mask generation with morphological opening

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,6 +126,7 @@ nav:
     - user-guide/config.md
     - user-guide/ingest.md
     - user-guide/motion.md
+    - user-guide/confounds.md
     - user-guide/outputs.md
     - user-guide/qc.md
     - user-guide/registration.md
