--- a/.github/workflows/ci-e2e.yml
+++ b/.github/workflows/ci-e2e.yml
@@ -11,38 +11,38 @@ jobs:
     name: End-to-End Smoke Test
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
-      
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e .
           pip install snakemake
-      
+
       - name: Run doctor diagnostics
         id: doctor
         run: |
           mkdir -p /tmp/spineprep-ci/out
           spineprep doctor --out /tmp/spineprep-ci/out || true
         continue-on-error: true
-      
+
       - name: Run E2E smoke test (dry-run)
         run: |
           pytest -xvs tests/test_e2e_smoke.py::test_e2e_pipeline_completes
-      
+
       - name: Run version test
         run: |
           pytest -xvs tests/test_e2e_smoke.py::test_e2e_version_matches
-      
+
       - name: Upload QC artifacts
         if: always()
         uses: actions/upload-artifact@v4
@@ -53,7 +53,7 @@ jobs:
             /tmp/pytest-of-*/pytest-*/test_e2e_pipeline_completes*/spineprep-out/derivatives/spineprep/**/reports/**
           if-no-files-found: warn
           retention-days: 7
-      
+
       - name: Upload DAG and provenance
         if: always()
         uses: actions/upload-artifact@v4
@@ -65,7 +65,7 @@ jobs:
             /tmp/spineprep-ci/out/provenance/*.json
           if-no-files-found: warn
           retention-days: 7
-      
+
       - name: Upload logs
         if: always()
         uses: actions/upload-artifact@v4
@@ -76,4 +76,30 @@ jobs:
             /tmp/pytest-of-*/pytest-*/test_e2e_pipeline_completes*/spineprep-out/derivatives/spineprep/logs/**/*.ok
           if-no-files-found: warn
           retention-days: 7
+      
+      - name: Create QC bundle zip
+        if: always()
+        run: |
+          mkdir -p /tmp/qc-bundle
+          # Copy QC HTML if exists
+          if [ -d "/tmp/pytest-of-"*"/pytest-"*"/test_e2e_pipeline_completes"*"/spineprep-out/derivatives/spineprep/qc" ]; then
+            cp -r /tmp/pytest-of-*/pytest-*/test_e2e_pipeline_completes*/spineprep-out/derivatives/spineprep/qc /tmp/qc-bundle/ || true
+          fi
+          # Copy provenance
+          if [ -d "/tmp/pytest-of-"*"/pytest-"*"/test_e2e_pipeline_completes"*"/spineprep-out/derivatives/spineprep/logs/provenance" ]; then
+            cp -r /tmp/pytest-of-*/pytest-*/test_e2e_pipeline_completes*/spineprep-out/derivatives/spineprep/logs/provenance /tmp/qc-bundle/ || true
+          fi
+          # Copy doctor report if exists
+          cp /tmp/spineprep-ci/out/provenance/*.json /tmp/qc-bundle/ 2>/dev/null || true
+          # Create zip
+          cd /tmp/qc-bundle && zip -r ../qc-bundle.zip . || echo "No files to zip"
+      
+      - name: Upload QC bundle zip
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: qc-bundle
+          path: /tmp/qc-bundle.zip
+          if-no-files-found: warn
+          retention-days: 30
 
