chore: restore noindex - keep site private indefinitely
- Restored robots noindex, nofollow meta tags
- Site will remain private (not publicly discoverable)
- Decision: Keep docs accessible only via direct link
- No future plans to enable public indexing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,6 +96,8 @@ extra:
     provider: mike
   # Analytics can be added via theme extras in CI if desired.
   meta:
+    - name: robots
+      content: noindex, nofollow
     - name: description
       content: "SpinePrep: rigorous spinal cord preprocessing pipeline with QC, registration and BIDS derivatives."
     - property: og:type
