feat(core): scaffold CLI with config loader and doctor command  [spi-001]
- Add config schema with motion, confounds, registration, and qc sections
- Update config defaults (configs/base.yaml) per ticket specification
- Implement JSON Schema validation with precedence (CLI > YAML > defaults)
- Add test_version.py and test_config_precedence.py
- Update test_doctor.py for version 0.2.0
- Add docs/cli.md with command documentation
- Update mkdocs.yml navigation
- Fix pytest.ini to remove invalid randomly-seed option
- Update CLI to remove unimplemented pipeline execution
- Bump version to 0.2.0 in _version.py and CITATION.cff

Acceptance criteria met:
- spineprep version prints semver
- spineprep run --print-config prints merged config
- spineprep doctor writes provenance/doctor-*.json
- All unit tests pass
- CI checks pass (ruff, snakefmt, codespell, mkdocs)

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -1,16 +1,37 @@
-# Minimal defaults (expand later as needed)
+# SpinePrep default configuration
+# CLI args and user YAML files override these defaults
+
 bids_root: null
 output_dir: "./out"
-pipeline:
-  motion:
-    fd_threshold: 0.5
-    dvars_threshold: 1.5
+
+motion:
+  fd:
+    threshold: 0.5  # mm
+  dvars:
+    threshold: 1.5
+  highpass:
+    hz: 0.008  # Hz
+
 confounds:
   acompcor:
     n_components: 6
+  tcompcor:
+    n_components: 0
+  censor:
+    method: "fd"  # One of: fd, dvars, fd+dvars
+
 registration:
-  target: "PAM50"
-  sct:
-    enable: true
+  pam50:
+    spacing: "0.5mm"
+  resample:
+    to: "native"  # One of: native, pam50
+  deformable:
+    enabled: false
+
 qc:
-  enable: true
+  ssim:
+    min: 0.85
+  psnr:
+    min: 20.0
+  report:
+    embed_assets: true
