feat(workflow): add minimal Snakemake integration and DAG export  [spi-A3]
- Create minimal workflow/Snakefile with rule all and touch_manifest
- Add spineprep/workflow/runner.py to invoke Snakemake programmatically
- Update CLI: spineprep run --bids --out executes workflow
- Add --save-dag flag to export DAG (SVG or DOT format)
- Workflow consumes manifest.csv and creates .manifest.touch
- Back up complex Snakefile to workflow/Snakefile.complex
- Add 4 comprehensive workflow tests (all pass)
- Create docs/user-guide/run.md with DAG export documentation
- Update mkdocs.yml navigation

Acceptance:
- spineprep run --dry-run generates manifest ✓
- spineprep run --save-dag exports DAG (SVG/DOT) ✓
- spineprep run --bids --out creates .manifest.touch ✓
- All new workflow tests pass (4/4) ✓
- Ruff clean ✓, snakefmt clean ✓, mkdocs builds ✓

LOC: ~180 lines (runner: 106, Snakefile: 36, cli: 40, tests: 130)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -126,6 +126,7 @@ nav:
   - User Guide:
     - CLI: cli.md
     - user-guide/usage.md
+    - user-guide/run.md
     - user-guide/doctor.md
     - user-guide/config.md
     - user-guide/ingest.md
