feat(preproc): add MP-PCA denoising rule for BOLD series  [spi-A4]
- Create spineprep/preproc/denoise.py with mppca_denoise() wrapper
- Add spineprep/preproc/denoise_cli.py for command-line invocation
- Create workflow/rules/preproc.smk with denoise_bold rule
- Update workflow/Snakefile to include preproc rules and denoise outputs
- Add 5 comprehensive tests (all pass)
- Update docs/user-guide/run.md with denoising section

MP-PCA features:
- Uses DIPY if available (patch=5, stride=3)
- Copy-through fallback if DIPY missing (with warning)
- Preserves image shape and affine
- Outputs: <out>/denoised/*_desc-mppca_bold.nii.gz

Acceptance:
- spineprep run creates *_desc-mppca_bold.nii.gz ✓
- Wrapper preserves shape/affine ✓
- Copy-through works without DIPY ✓
- DAG export still functional ✓
- All new tests pass (5/5) ✓
- Ruff/snakefmt clean ✓, mkdocs builds ✓

LOC: ~150 lines (denoise: 76, denoise_cli: 44, rule: 65, cli: minor)

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,5 +1,5 @@
-# SpinePrep Minimal Workflow (A3)
-# Consumes manifest.csv and creates a touch file to verify workflow execution
+# SpinePrep Minimal Workflow (A3 + A4)
+# Consumes manifest.csv, applies MP-PCA denoising to BOLD series
 
 import sys
 from pathlib import Path
@@ -16,10 +16,15 @@ OUT_DIR = config.get("out_dir", "./out")
 MANIFEST_CSV = config.get("manifest_csv", f"{OUT_DIR}/manifest.csv")
 
 
+# Include preprocessing rules
+include: "rules/preproc.smk"
+
+
 rule all:
-    """Target rule that depends on manifest processing."""
+    """Target rule that depends on manifest processing and denoising."""
     input:
         touch=f"{OUT_DIR}/.manifest.touch",
+        denoised=get_denoise_outputs(),
 
 
 rule touch_manifest:
