feat(confounds): add motion, FD/DVARS, and spike detection  [spi-A5]
- Create spineprep/confounds/basic.py with compute_fd_power(), compute_dvars(), detect_spikes()
- Add spineprep/confounds/cli_basic.py for CLI invocation
- Create workflow/rules/confounds.smk with confounds_basic rule
- Update workflow/Snakefile to include confounds outputs
- Add 8 unit tests + 1 e2e workflow test (all pass)
- Update docs/user-guide/run.md with confounds section

Confounds features:
- FD (Power method) with 50mm radius
- DVARS from temporal derivative with implicit masking
- Spike detection: FD >= 0.5mm OR DVARS Z-score >= 2.5
- 9-column TSV: trans_x/y/z, rot_x/y/z, fd_power, dvars, spike
- JSON sidecar with method metadata

Acceptance:
- spineprep run creates TSV+JSON for each BOLD ✓
- TSV has 9 columns in exact order, T rows ✓
- First row zeros, spike column 0/1 ✓
- All tests pass (8 unit + 1 e2e) ✓
- DAG export works ✓
- Ruff/snakefmt clean ✓, mkdocs builds ✓

LOC: ~190 lines (basic: 98, cli_basic: 73, rule: 42)

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -16,15 +16,17 @@ OUT_DIR = config.get("out_dir", "./out")
 MANIFEST_CSV = config.get("manifest_csv", f"{OUT_DIR}/manifest.csv")
 
 
-# Include preprocessing rules
+# Include preprocessing and confounds rules
 include: "rules/preproc.smk"
+include: "rules/confounds.smk"
 
 
 rule all:
-    """Target rule that depends on manifest processing and denoising."""
+    """Target rule that depends on manifest processing, denoising, and confounds."""
     input:
         touch=f"{OUT_DIR}/.manifest.touch",
         denoised=get_denoise_outputs(),
+        confounds=get_confounds_outputs(),
 
 
 rule touch_manifest:
